Don't worry about pending reads for a track-change-seek

Bug: 878535
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: Ib533d391f818054defe9284804e230edfbffdfb3
Reviewed-on: https://chromium-review.googlesource.com/1194963
Commit-Queue: Ted Meyer <tmathmeyer@chromium.org>
Reviewed-by: Dale Curtis <dalecurtis@chromium.org>
Cr-Commit-Position: refs/heads/master@{#587181}
Former-commit-id: 707c0aa45d30296165cef33d69754220b210af8c